feat: Feitos ajustes na topbar, criado util para tratar dados do menu e alterado modelo do menu principal.

--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudscape-design/chat-components": "^1.0.53",
     "@cloudscape-design/components": "^3.0.993",
+    "@cloudscape-design/design-tokens": "^3.0.58",
     "@cloudscape-design/global-styles": "^1.0.44",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
