--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@cloudscape-design/design-tokens": "^3.0.58",
     "@cloudscape-design/global-styles": "^1.0.44",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
